Fix Apple Store badge anchor spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ img.app-store-badge {
 	min-height: 40px;
 	max-height: 25%;
 	width: auto;
-	padding: 1em;
+	margin: 1em;
 }
 
 /* BIG SCREEN IN LIGHT MODE */
